update click listeners

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -172,7 +172,7 @@
     <string-array name="help_titles">
         <item>Що додаток робить?</item>
         <item>Що таке порівняння?</item>
-        <item>Створення поріаняння</item>
+        <item>Створення порівняння</item>
         <item>Пошук</item>
         <item>Використовуйте фільтри</item>
         <item>Підписники</item>
