--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -166,4 +166,30 @@
         <item>0</item>
     </string-array>
 
+
+    <!-- HELP -->
+
+    <string-array name="help_titles">
+        <item>Что делает приложение?</item>
+        <item>Что такое сравнение?</item>
+        <item>Создание сравнения</item>
+        <item>Поиск</item>
+        <item>Используйте фильтры</item>
+        <item>Подписки</item>
+    </string-array>
+
+    <string-array name="help_text">
+        <item>Choose Helper может помочь вам сделать сложный выбор. Просто
+            создайте сравнение и узнайте, что об этом думают другие.</item>
+        <item>Сравнение це объект, который описывает выбор, который Вы не можете сделать.
+            Сравнения содержат вопрос та описание вариантов, между которым вы колеблитесь</item>
+        <item>Для создания сравнения просто нажмите крутую кнопку. Введите вопрос, выберите фото
+            и краткое описание вариантов и публикуйте.</item>
+        <item>Вы можете совершать поиск по заголовкам вариантов сравнения,
+            как показано на картинке ниже.</item>
+        <item>Откройте настройки и выберите категории сравнений, которые вас интересуют.
+            Также можно выбрать количество сравнений, которые будут отображаться в главном окне.</item>
+        <item>Следите за другими пользователями, сравнения которые интересны для вас.</item>
+    </string-array>
+
 </resources>
