--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -192,7 +192,7 @@
         <item>Следите за другими пользователями, сравнения которые интересны для вас.</item>
     </string-array>
     <string name="no_compares">Нет сравнений</string>
-    <string name="no_followers"></string>
+    <string name="no_followers">Нет подписчиков</string>
     <string name="no_image">Картинка для этого варианта отсутствует</string>
     <string name="no_followings">Нет подписок</string>
 
